src/objects/Apttus_DocuApi__DocuSignEnvelopeRecipientStatus__c.object
<CustomObject>
    <description>Docusign envelope recipient status</description>
    <fields>
        <fullName>Apttus_DocuApi__BatchJobId__c</fullName>
        <description>Batch job id will be used to trigger extension package task history update(System use only field do not add to layout)</description>
        <inlineHelpText>Batch job id will be used to trigger extension package task history update(System use only field do not add to layout)</inlineHelpText>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Company__c</fullName>
        <description>Recipient Company name from DocuSign Tab/Tag</description>
        <inlineHelpText>Recipient Company name from DocuSign Tab/Tag</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DeclinedReason__c</fullName>
        <description>eSignature decline reason</description>
        <inlineHelpText>eSignature decline reason</inlineHelpText>
        <label>Declined Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DeliveredDateTime__c</fullName>
        <description>Recipient Delivered Date Time</description>
        <inlineHelpText>Recipient Delivered Date Time</inlineHelpText>
        <label>Delivered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocuSignEnvelopeId__c</fullName>
        <description>DocuSign Envelope Id master record id (SFDC ID)</description>
        <inlineHelpText>DocuSign Envelope Id master record id (SFDC ID)</inlineHelpText>
        <label>DocuSign Envelope Id</label>
        <referenceTo>Apttus_DocuApi__DocuSignEnvelope__c</referenceTo>
        <relationshipLabel>DocuSign Envelope Recipient Status</relationshipLabel>
        <relationshipName>DocuSignEnvelopeRecipientStatus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocusignUpperEnvelopeId__c</fullName>
        <description>Store envelope id in upper case, used in webhook integration.</description>
        <formula>UPPER(Apttus_DocuApi__DocuSignEnvelopeId__r.Apttus_DocuApi__EnvelopeId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Store envelope id in upper case, used in webhook integration.</inlineHelpText>
        <label>Docusign Envelope Id (Upper)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Email__c</fullName>
        <description>Recipient Email ID</description>
        <inlineHelpText>Recipient Email ID</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EnvelopeParentId__c</fullName>
        <description>Reference field for the DocuSign Envelope linked to parent SFDC object id</description>
        <inlineHelpText>Reference field for the DocuSign Envelope linked to parent  SFDC  object id</inlineHelpText>
        <label>Envelope Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EnvelopeRecipientStatus__c</fullName>
        <description>System internal use only. Make limited SOQL query find the current recipient status</description>
        <formula>Apttus_DocuApi__DocuSignEnvelopeId__r.Apttus_DocuApi__EnvelopeId__c   &amp; &apos;_&apos; &amp; Apttus_DocuApi__Email__c  &amp; &apos;_&apos; &amp; Apttus_DocuApi__RoleName__c  &amp; &apos;_&apos; &amp; Apttus_DocuApi__RoutingOrder__c  &amp; &apos;_&apos; &amp; Apttus_DocuApi__Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System internal use only. Make limited SOQL query find the current recipient status</inlineHelpText>
        <label>Envelope Recipient Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RecipientName__c</fullName>
        <description>Name of the Recipient from DocuSign (sent as part of the Envelope)</description>
        <inlineHelpText>Name of the Recipient from DocuSign (sent as part of the Envelope)</inlineHelpText>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RecipientTab__c</fullName>
        <description>Recipient Tab from DocuSign</description>
        <inlineHelpText>Recipient Tab from DocuSign</inlineHelpText>
        <label>RecipientTab</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RoleName__c</fullName>
        <description>Recipient Role Name</description>
        <inlineHelpText>Recipient Role Name</inlineHelpText>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RoutingOrder__c</fullName>
        <description>Recipient Routing Order Number</description>
        <inlineHelpText>Recipient Routing Order Number</inlineHelpText>
        <label>Routing Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__SignedDateTime__c</fullName>
        <description>Recipients Signed Date Time</description>
        <inlineHelpText>Recipients Signed Date Time</inlineHelpText>
        <label>Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Status__c</fullName>
        <description>Envelope Recipient Status</description>
        <inlineHelpText>Envelope Recipient Status</inlineHelpText>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Title__c</fullName>
        <description>Recipient Title name from DocuSign Tab/Tag</description>
        <inlineHelpText>Recipient Title name from DocuSign Tab/Tag</inlineHelpText>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__WebhookStatus__c</fullName>
        <description>Update status when webhook enabled.</description>
        <inlineHelpText>Update status when webhook enabled.</inlineHelpText>
        <label>Webhook Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope Recipient Status</label>
    <listViews>
        <fullName>Apttus_DocuApi__All</fullName>
        <columns>Apttus_DocuApi__RecipientName__c</columns>
        <columns>Apttus_DocuApi__Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Apttus_DocuApi__Status__c</columns>
        <columns>Apttus_DocuApi__RoutingOrder__c</columns>
        <columns>Apttus_DocuApi__RoleName__c</columns>
        <columns>Apttus_DocuApi__DocuSignEnvelopeId__c</columns>
        <columns>Apttus_DocuApi__EnvelopeRecipientStatus__c</columns>
        <columns>Apttus_DocuApi__Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_DocuApi__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>DocuSignEnvelopeRecipientStatus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Envelope Recipient Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>